# claude-config-installer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.py  install.sh  pyproject.toml
src/: version.py
src/agents/: convention-guard.md  developer.md  tdd-coach.md  test-architect.md
src/commands/: queue.md
src/commands/queue/: cancel.md  list.md  move.md  next.md
src/commands/sc/: drawio2drawio.md  planning.md
src/docs/: ANALYZE_COMMAND.md
src/hooks/: queue-auto-execute.sh  queue-session-start.sh  queue-user-prompt.sh
src/lib/: formatters.py  version.py
src/root/: .superclaude-metadata.json  CLAUDE.md  MODE_Task_Queue.md  RULES.md  settings.json
src/scripts/: auto_continue.py  auto_queue_hook.py  parallel_executor.py  queue_manager.py  session_context.py  task_analyzer.py
src/skills/drawio2drawio/: ANALYSIS_SCHEMA.md  PIPELINE.md  SHAPE_STANDARDS.md  SKILL.md
src/skills/planning/: CONVENTION_TRACKER.md  DOMAIN_EXPERTS.md  ERROR_HANDLING.md  EXAMPLES.md  REVIEW_CRITERIA.md  REVIEW_FORMAT.md  SKILL.md  TEST_SCENARIOS.md
src/skills/task-queue/: SKILL.md
src/tests/: test_scope_analysis.py
tests/: conftest.py
tests/e2e/: test_install_sh.py
tests/integration/: test_installer_integration.py
tests/unit/: test_install.py  test_source_files.py  test_version.py
